--- a/elab4-backend/src/main/resources/publication/WEB-INF/web.xml
+++ b/elab4-backend/src/main/resources/publication/WEB-INF/web.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
   #%L
-  elab4-publication-backend
+  elab4-backend
   =======
-  Copyright (C) 2013 - 2014 Huygens ING
+  Copyright (C) 2011 - 2014 Huygens ING
   =======
   This program is free software: you can redistribute it and/or modify
   it under the terms of the GNU General Public License as
