--- a/elab4-common/pom.xml
+++ b/elab4-common/pom.xml
@@ -31,6 +31,11 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>${slf4j.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>${commons-logging.version}</version>
+		</dependency>
 
 		<!-- test dependencies -->
 		<dependency>
