--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 
 		<c3p0.version>0.9.1.2</c3p0.version>
 		<commons-lang.version>2.6</commons-lang.version>
+		<commons-logging.version>1.1.3</commons-logging.version>
 		<flexjson.version>3.1</flexjson.version>
 		<fest.version>1.0.16</fest.version>
 		<freemarker.version>2.3.20</freemarker.version>
