--- a/elab4-backend/src/main/resources/about.properties
+++ b/elab4-backend/src/main/resources/about.properties
@@ -1,2 +1,2 @@
-build=production_deploy_2015.04.23.18.10.22
-builddate=Thu, Apr 23, 2015  6:11:52 PM
+build=testdeploy_2015.08.13.17.14.31
+builddate=Thu, Aug 13, 2015  5:15:59 PM
