--- a/elab4-publication-backend/src/main/webapp/WEB-INF/web.xml
+++ b/elab4-publication-backend/src/main/webapp/WEB-INF/web.xml
@@ -67,10 +67,19 @@
 
   <filter-mapping>
     <filter-name>UrlRewriteFilter</filter-name>
+    <url-pattern>/nl/entry/*</url-pattern>
+    <url-pattern>/en/entry/*</url-pattern>
+    <url-pattern>/es/entry/*</url-pattern>
     <url-pattern>/entry/*</url-pattern>
     <url-pattern>/index</url-pattern>
     <url-pattern>/search</url-pattern>
+    <url-pattern>/nl/search</url-pattern>
+    <url-pattern>/en/search</url-pattern>
+    <url-pattern>/es/search</url-pattern>
     <url-pattern>/search/*</url-pattern>
+    <url-pattern>/nl/search/*</url-pattern>
+    <url-pattern>/en/search/*</url-pattern>
+    <url-pattern>/es/search/*</url-pattern>
     <url-pattern>/annotations</url-pattern>
     <url-pattern>/annotations/*</url-pattern>
     <url-pattern>/person/*</url-pattern>
