--- a/elab4-backend/src/main/resources/about.properties
+++ b/elab4-backend/src/main/resources/about.properties
@@ -1,2 +1,2 @@
-build=testdeploy_2015.09.22.13.29.07
-builddate=Tue, Sep 22, 2015  1:32:41 PM
+build=testdeploy_2015.09.23.10.36.23
+builddate=Wed, Sep 23, 2015 10:37:55 AM
