--- a/elab4-publication-backend/src/main/resources/about.properties
+++ b/elab4-publication-backend/src/main/resources/about.properties
@@ -1,2 +1,2 @@
-build=publication_backend_2015.09.22.13.28.43
-builddate=Tue, Sep 22, 2015  1:28:43 PM
+build=publication_backend_2015.09.23.10.35.58
+builddate=Wed, Sep 23, 2015 10:35:58 AM
