--- a/elab4-publication-backend/src/main/resources/about.properties
+++ b/elab4-publication-backend/src/main/resources/about.properties
@@ -1,2 +1,3 @@
-build=publication_backend_2015.09.24.10.29.34
-builddate=Thu, Sep 24, 2015 10:29:35 AM
+build=publication_backend_2015.10.27.09.33.04
+builddate=Tue, Oct 27, 2015  9:33:05 AM
+version=${project.version}
