--- a/elab4-backend/src/main/resources/about.properties
+++ b/elab4-backend/src/main/resources/about.properties
@@ -1,2 +1,3 @@
-build=testdeploy_2015.10.27.09.33.19
-builddate=Tue, Oct 27, 2015  9:34:44 AM
+build=${build}
+builddate=${builddate}
+version=${project.version}
