--- a/elab4-publication-backend/src/main/resources/about.properties
+++ b/elab4-publication-backend/src/main/resources/about.properties
@@ -1,2 +1,2 @@
-build=publication_backend_2015.10.27.10.48.13
-builddate=Tue, Oct 27, 2015 10:48:13 AM
+build=publication_backend_2015.11.19.13.44.14
+builddate=Thu, Nov 19, 2015  1:44:14 PM
