--- a/pom.xml
+++ b/pom.xml
@@ -41,13 +41,13 @@
 		<freemarker.version>2.3.23</freemarker.version>
 		<guava.version>19.0</guava.version>
 		<guice.version>4.0</guice.version>
-		<hibernate.version>5.0.5.Final</hibernate.version>
+		<hibernate.version>4.3.8.Final</hibernate.version><!-- > 4.3.8.Final : java.lang.ClassNotFoundException: javax.transaction.SystemException -->
 		<hsqldb.version>2.3.3</hsqldb.version>
 		<jackson.version>2.3.0</jackson.version><!-- 2.6.1 gives NoClassDefFoundError -->
 		<javaxservlet-api.version>3.0-alpha-1</javaxservlet-api.version>
 		<jaxrstools.version>0.0.7</jaxrstools.version>
 		<jersey.version>1.19</jersey.version>
-		<jersey-client.version>2.6</jersey-client.version><!-- 2.7 = jdk7 -->
+		<jersey-client.version>2.6</jersey-client.version><!-- > 2.6 = jdk7 -->
 		<joda-time.version>2.9.1</joda-time.version>
 		<jsoup.version>1.7.3</jsoup.version><!-- >= 1.8.1 throws an error -->
 		<jsr250-api.version>1.0</jsr250-api.version>
@@ -62,7 +62,7 @@
 		<maven-deploy.version>2.8.2</maven-deploy.version>
 		<mockito.version>2.0.31-beta</mockito.version>
 		<pdfbox.version>1.8.8</pdfbox.version>
-		<postgresql.version>9.4-1206-jdbc42</postgresql.version>
+		<postgresql.version>9.3-1100-jdbc4</postgresql.version> <!-- > 9.3-1100-jdbc4 = JDK7 -->
 		<security.version>2.1.4</security.version>
 		<!-- <security.version>2.2.1</security.version> --><!-- nog niet voldoende getest -->
 		<servlet-api.version>3.1.0</servlet-api.version>
