--- a/elab4-backend/pom.xml
+++ b/elab4-backend/pom.xml
@@ -42,6 +42,10 @@
 					<artifactId>slf4j-log4j12</artifactId>
 					<groupId>org.slf4j</groupId>
 				</exclusion>
+				<exclusion>
+					<artifactId>jersey-servlet</artifactId>
+					<groupId>com.sun.jersey</groupId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
@@ -109,11 +113,6 @@
 			</dependency> <dependency> <groupId>org.skyscreamer</groupId> <artifactId>yoga-jaxrs</artifactId> <version>${yoga.version}</version> 
 			</dependency> <dependency> <groupId>org.skyscreamer</groupId> <artifactId>yoga-hibernate</artifactId> <version>${yoga.version}</version> 
 			</dependency> -->
-		<dependency>
-			<groupId>c3p0</groupId>
-			<artifactId>c3p0</artifactId>
-			<version>${c3p0.version}</version>
-		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
