--- a/elab4-backend/src/main/resources/publication/WEB-INF/classes/about.properties
+++ b/elab4-backend/src/main/resources/publication/WEB-INF/classes/about.properties
@@ -1,2 +1,4 @@
-build=publication_backend_2016.01.04.15.55.18
-builddate=Mon, Jan 04, 2016  3:55:18 PM
+buildDate=2016-01-06T10:49:20Z
+commitId=229334390610693b81cc4411ed4f3787b7d5519b
+scmBranch=develop
+version=4.0.6-SNAPSHOT
