--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 		<assertj-core.version>1.7.1</assertj-core.version><!-- 2.0.0 = jdk1.7 -->
 		<assertj-guava.version>1.3.0</assertj-guava.version><!-- 2.0.0 = jdk1.7 -->
 		<assertj-assertions-generator>1.6.0</assertj-assertions-generator>
-		<build-helper-maven.version>1.9.1</build-helper-maven.version>
+		<build-helper-maven.version>1.10</build-helper-maven.version>
 		<c3p0.version>0.9.1.2</c3p0.version>
 		<classloader-leak-prevention.version>1.15.2</classloader-leak-prevention.version>
 		<commons-configuration.version>1.10</commons-configuration.version><!-- because of hadoop-common dependency in solr-core -->
@@ -56,15 +56,15 @@
 		<jsoup.version>1.7.3</jsoup.version><!-- >= 1.8.1 throws an error -->
 		<jsr250-api.version>1.0</jsr250-api.version>
 		<jtidy.version>r938</jtidy.version>
-		<jetty-maven.version>9.3.6.v20151106</jetty-maven.version>
+		<jetty-maven.version>9.3.8.RC0</jetty-maven.version>
 		<junit.version>4.12</junit.version>
 		<log.version>1.1.1</log.version>
 		<maven-assembly.version>2.4</maven-assembly.version>
-		<maven-compiler.version>3.3</maven-compiler.version>
+		<maven-compiler.version>3.5.1</maven-compiler.version>
 		<maven-license.version>1.8</maven-license.version>
 		<maven-war.version>2.6</maven-war.version>
 		<maven-deploy.version>2.8.2</maven-deploy.version>
-		<mockito.version>2.0.42-beta</mockito.version>
+		<mockito.version>2.0.43-beta</mockito.version>
 		<pdfbox.version>1.8.8</pdfbox.version>
 		<postgresql.version>9.3-1100-jdbc4</postgresql.version> <!-- > 9.3-1100-jdbc4 = JDK7 -->
 		<security.version>2.1.4</security.version>
