--- a/elab4-common/pom.xml
+++ b/elab4-common/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>nl.knaw.huygens.elab4</groupId>
 		<artifactId>elab4</artifactId>
-		<version>4.0.7-SNAPSHOT</version>
+		<version>4.0.7</version>
 	</parent>
 	<artifactId>elab4-common</artifactId>
 	<inceptionYear>2013</inceptionYear>
