--- a/elab4-backend/src/main/resources/publication/WEB-INF/classes/about.properties
+++ b/elab4-backend/src/main/resources/publication/WEB-INF/classes/about.properties
@@ -19,7 +19,7 @@
 # <http://www.gnu.org/licenses/gpl-3.0.html>.
 # #L%
 ###
-buildDate=2016-04-14T15:13:55Z
-commitId=a311f8d96994bacf6dfaa7727c293f08f3bb7cc0
-scmBranch=feature-mvn-rangebased
+buildDate=2016-04-18T13:31:23Z
+commitId=e64d06d2170551c98c27356361caebe5054a862f
+scmBranch=develop
 version=4.0.9-SNAPSHOT
