--- a/elab4-common/pom.xml
+++ b/elab4-common/pom.xml
@@ -66,6 +66,12 @@
 			<version>${assertj-core.version}</version>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations-java5</artifactId>
+			<version>${annotations-java5.version}</version>
+            <scope>compile</scope>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 </project>
