--- a/elab4-backend/src/main/resources/publication/WEB-INF/classes/about.properties
+++ b/elab4-backend/src/main/resources/publication/WEB-INF/classes/about.properties
@@ -1,8 +1,8 @@
 ###
 # #%L
-# elab4-backend
+# elab4-publication-backend
 # =======
-# Copyright (C) 2011 - 2018 Huygens ING
+# Copyright (C) 2013 - 2018 Huygens ING
 # =======
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as
@@ -19,7 +19,7 @@
 # <http://www.gnu.org/licenses/gpl-3.0.html>.
 # #L%
 ###
-buildDate=2016-10-26T09:30:50Z
-commitId=514385f511d60ef0023587b4d76b233c44c143b6
+buildDate=2018-11-06T11:23:27Z
+commitId=4539ba67de4a60bd22301568cb4c328d8a90052d
 scmBranch=master
-version=4.0.11
+version=4.0.12
