--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,7 @@
         <xmlunit.version>1.5</xmlunit.version>
         <yoga.version>1.0.0</yoga.version>
         <annotations-java5.version>16.0.3</annotations-java5.version>
+        <commons-text.version>1.6</commons-text.version>
     </properties>
 
     <repositories>
