--- a/pom.xml
+++ b/pom.xml
@@ -42,13 +42,13 @@
     <facetedsearchtools.version>0.3.0</facetedsearchtools.version>
     <fest.version>1.0.16</fest.version>
     <flexjson.version>3.3</flexjson.version>
-    <freemarker.version>2.3.28</freemarker.version>
-    <guava.version>19.0</guava.version>
-    <guice.version>4.2.2</guice.version>
-    <hibernate.version>4.3.8.Final</hibernate.version><!-- > 4.2.7 uses javassist, leads to "org.hibernate.jpa.boot.archive.spi.ArchiveException:
+    <freemarker.version>2.3.30</freemarker.version>
+    <guava.version>30.0-android</guava.version>
+    <guice.version>5.0.0</guice.version>
+    <hibernate.version>5.4.24.Final</hibernate.version><!-- > 4.2.7 uses javassist, leads to "org.hibernate.jpa.boot.archive.spi.ArchiveException:
 			Could not build ClassFile", > 4.3.8.Final : java.lang.ClassNotFoundException: javax.transaction.SystemException -->
     <hsqldb.version>2.3.3</hsqldb.version>
-    <jackson.version>2.3.0</jackson.version><!-- 2.6.1 gives NoClassDefFoundError -->
+    <jackson.version>2.10.0</jackson.version><!-- 2.6.1 gives NoClassDefFoundError -->
     <javaxservlet-api.version>3.0-alpha-1</javaxservlet-api.version>
     <jaxrstools.version>0.1.0</jaxrstools.version>
     <jersey.version>1.19.4</jersey.version>
@@ -66,7 +66,7 @@
     <maven-war.version>2.6</maven-war.version>
     <maven-deploy.version>2.8.2</maven-deploy.version>
     <mockito.version>2.23.0</mockito.version>
-    <pdfbox.version>1.8.8</pdfbox.version>
+    <pdfbox.version>1.8.15</pdfbox.version>
     <postgresql.version>9.3-1100-jdbc4</postgresql.version> <!-- > 9.3-1100-jdbc4 = JDK7 -->
     <security.version>2.1.4</security.version>
     <!-- <security.version>2.2.1</security.version> --><!-- nog niet voldoende getest -->
