--- a/pom.xml
+++ b/pom.xml
@@ -26,18 +26,19 @@
     <elab4.version>${project.parent.version}</elab4.version>
     <elab4-config.version>1.1</elab4-config.version>
 
+    <annotations-java5.version>16.0.3</annotations-java5.version>
     <appassembler-maven.version>1.3.1</appassembler-maven.version>
+    <assertj-assertions-generator>1.6.0</assertj-assertions-generator>
     <assertj-core.version>1.7.1</assertj-core.version><!-- 2.0.0 = jdk1.7 -->
     <assertj-guava.version>1.3.0</assertj-guava.version><!-- 2.0.0 = jdk1.7 -->
-    <assertj-assertions-generator>1.6.0</assertj-assertions-generator>
     <build-helper-maven.version>3.2.0</build-helper-maven.version>
     <c3p0.version>0.9.1.2</c3p0.version>
     <classloader-leak-prevention.version>1.15.4</classloader-leak-prevention.version>
-    <commons-configuration.version>1.10
-    </commons-configuration.version><!-- because of hadoop-common dependency in solr-core -->
+    <commons-configuration.version>1.10</commons-configuration.version><!-- because of hadoop-common dependency in solr-core -->
     <commons-email.version>1.5</commons-email.version>
     <commons-lang3.version>3.8.1</commons-lang3.version>
     <commons-logging.version>1.2</commons-logging.version>
+    <commons-text.version>1.9</commons-text.version>
     <datables.version>1.1.0</datables.version>
     <facetedsearchtools.version>0.3.0</facetedsearchtools.version>
     <fest.version>1.0.16</fest.version>
@@ -45,31 +46,30 @@
     <freemarker.version>2.3.30</freemarker.version>
     <guava.version>30.0-android</guava.version>
     <guice.version>5.0.0</guice.version>
-    <hibernate.version>5.4.24.Final</hibernate.version><!-- > 4.2.7 uses javassist, leads to "org.hibernate.jpa.boot.archive.spi.ArchiveException:
-			Could not build ClassFile", > 4.3.8.Final : java.lang.ClassNotFoundException: javax.transaction.SystemException -->
+    <hibernate.version>5.4.24.Final</hibernate.version><!-- > 4.2.7 uses javassist, leads to "org.hibernate.jpa.boot.archive.spi.ArchiveException:			Could not build ClassFile", > 4.3.8.Final : java.lang.ClassNotFoundException: javax.transaction.SystemException -->
     <hsqldb.version>2.3.3</hsqldb.version>
     <jackson.version>2.12.2</jackson.version><!-- 2.6.1 gives NoClassDefFoundError -->
     <javaxservlet-api.version>3.0-alpha-1</javaxservlet-api.version>
+    <jaxb-api.version>2.4.0-b180830.0359</jaxb-api.version>
     <jaxrstools.version>0.1.0</jaxrstools.version>
-    <jersey.version>1.19.4</jersey.version>
     <jersey-client.version>2.6</jersey-client.version><!-- > 2.6 = jdk7 -->
+    <jersey.version>1.19.4</jersey.version>
+    <jetty-maven.version>11.0.2</jetty-maven.version>
     <joda-time.version>2.10.1</joda-time.version>
     <jsoup.version>1.7.3</jsoup.version><!-- >= 1.8.1 throws an error -->
     <jsr250-api.version>1.0</jsr250-api.version>
     <jtidy.version>r938</jtidy.version>
-    <jetty-maven.version>11.0.2</jetty-maven.version>
     <junit.version>4.12</junit.version>
     <log.version>1.1.1</log.version>
     <maven-assembly.version>2.4</maven-assembly.version>
     <maven-compiler.version>3.8.1</maven-compiler.version>
+    <maven-deploy.version>2.8.2</maven-deploy.version>
     <maven-license.version>1.20</maven-license.version>
     <maven-war.version>3.3.0</maven-war.version>
-    <maven-deploy.version>2.8.2</maven-deploy.version>
     <mockito.version>2.23.0</mockito.version>
     <pdfbox.version>1.8.15</pdfbox.version>
     <postgresql.version>9.3-1100-jdbc4</postgresql.version> <!-- > 9.3-1100-jdbc4 = JDK7 -->
-    <security.version>2.1.4</security.version>
-    <!-- <security.version>2.2.1</security.version> --><!-- nog niet voldoende getest -->
+    <security.version>2.1.4</security.version><!-- <security.version>2.2.1</security.version> --><!-- nog niet voldoende getest -->
     <servlet-api.version>3.1.0</servlet-api.version>
     <slf4j.version>1.7.10</slf4j.version>
     <solr.version>4.6.0</solr.version><!-- 4.7.0 throws an error -->
@@ -80,9 +80,6 @@
     <wagon-ssh.version>3.4.3</wagon-ssh.version>
     <xmlunit.version>1.5</xmlunit.version>
     <yoga.version>1.0.0</yoga.version>
-    <annotations-java5.version>16.0.3</annotations-java5.version>
-    <commons-text.version>1.9</commons-text.version>
-    <jaxb-api.version>2.4.0-b180830.0359</jaxb-api.version>
   </properties>
 
   <repositories>
